# personal-ai-engineer

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE_NOTES_v0.5.0.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: embeddings.py  file_hash.py  file_reader.py  github_loader.py  index_metadata.py  indexer.py  llm.py  main.py  models.py  vector_store.py
app/routers/: chat.py  explain.py  health.py  ingest.py  repo_explorer.py  search.py
app/services/: chat_service.py  explain_service.py  ingest_service.py  repo_explorer_service.py  search_service.py
core/: config.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: api.ts
frontend/src/components/: ChatForm.tsx  ExplainFileForm.tsx  Header.tsx  IngestForm.tsx  RepoDashboard.tsx  SearchCodeForm.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
